--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 15 19:19:36 BST 2004 Bartosz Fenski aka fEnIo <fenio@o2.pl>
+
+  * po/pl.po: Updated.
+
 Mon Jun 14 09:35:30 BST 2004 Ruben Porras <nahoo82@telefonica.net>
 
   * man/es/dpkg-scanpackages.1, man/es/start-stop-daemon.8, 
