--- a/po/pl.po
+++ b/po/pl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.9.20\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-06-01 18:18-0300\n"
-"PO-Revision-Date: 2004-04-09 12:51+0200\n"
+"PO-Revision-Date: 2004-06-13 19:28+0200\n"
 "Last-Translator: Bartosz Fenski <fenio@o2.pl>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
@@ -2122,7 +2122,7 @@ msgid " --licence for copyright and license details.\n"
 msgstr " --licence informacje o prawach autorskich i licencji.\n"
 
 #: main/main.c:58
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: \n"
 "  dpkg -i|--install      <.deb file name> ... | -R|--recursive <dir> ...\n"
@@ -2248,6 +2248,8 @@ msgstr ""
 "  --no-act                 Tylko poka¿ co siê stanie - nie zmieniaj niczego\n"
 "  -D|--debug=<ósemkowo>    W³±czenie debuggera - zobacz -Dhelp lub --"
 "debug=help\n"
+"  --status-fd <n>          Wy¶lij aktualizacje zmian stanu do pliku "
+"<n>\n"
 "  --ignore-depends=<pakiet>,... Ignoruj zale¿no¶ci dotycz±ce <pakietu>\n"
 "  --force-...                   Ignoruj problemy - zobacz --force-help\n"
 "  --no-force-...|--refuse-...   Zatrzymaj gdy wyst±pi± problemy\n"
@@ -3502,13 +3504,13 @@ msgid "archive has malformatted ctrl len `%s'"
 msgstr "archiwum ma uszkodzon± d³ugo¶æ kontroln± `%s'"
 
 #: dpkg-deb/extract.c:193
-#, fuzzy, c-format
+#, c-format
 msgid ""
 " old debian package, version %s.\n"
 " size %ld bytes: control archive= %zi, main archive= %ld.\n"
 msgstr ""
 " poprzedni pakiet debiana, wersja %s.\n"
-" rozmiar %ld bajtów: archiwum kontrolne= %ld, archiwum z danymi= %zi.\n"
+" rozmiar %ld bajtów: archiwum kontrolne= %zi, archiwum z danymi= %ld.\n"
 
 #: dpkg-deb/extract.c:202
 msgid "ctrlarea"
@@ -3908,7 +3910,7 @@ msgid "file `%.250s' is not an archive part"
 msgstr "plik `%.250s' nie jest czê¶ci± archiwum"
 
 #: split/info.c:188
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s:\n"
 "    Part format version:            %s\n"
@@ -3931,9 +3933,9 @@ msgstr ""
 "        ... d³ugo¶æ:                %lu bajtów\n"
 "        ... podzielony co:          %lu bajtów\n"
 "    Numer czê¶ci:                   %d/%d\n"
-"    D³ugo¶æ czê¶ci:                 %lu bajtów\n"
+"    D³ugo¶æ czê¶ci:                 %zi bajtów\n"
 "    Offset czê¶ci:                  %lu bajtów\n"
-"    Rozmiar pliku czê¶ci (u¿yta):   %zi bajtów\n"
+"    Rozmiar pliku czê¶ci (u¿yta):   %lu bajtów\n"
 "\n"
 
 #: split/info.c:218
@@ -5346,7 +5348,6 @@ msgid " verbose:v help:?"
 msgstr " szczegó³y:v pomoc:?"
 
 #: dselect/pkginfo.cc:82
-#, fuzzy
 msgid ""
 "The line you have highlighted represents many packages; if you ask to "
 "install, remove, hold, etc. it you will affect all the packages which match "
@@ -5359,12 +5360,12 @@ msgid ""
 msgstr ""
 "Pod¶wietlona linia reprezentuje wiele pakietów; je¿eli zostanie wybrana "
 "operacja instalacji, usuniêcia, wyczyszczenia lub wstrzymania, dotyczyæ "
-"bêdzie wszystkich pakietów, które odpowiadaj± podanemu kreterium.\n"
+"bêdzie wszystkich pakietów, które odpowiadaj± podanemu kryterium.\n"
 "\n"
 "Mo¿na przesun±æ kursor aby wybraæ konkretny pakiet oraz uzyskaæ informacje o "
 "nim.\n"
-"Mo¿na u¿yæ `o' lub `O' aby zmieniæ kolejno¶æ uporz±dkowania pakietów, aby "
-"wybraæ inn± grupê pakietów."
+"Mo¿na u¿yæ `o' lub `O' aby zmieniæ kolejno¶æ uporz±dkowania pakietów lub "
+"zaznaczyæ pakiety z innych grup."
 
 #: dselect/pkginfo.cc:96
 msgid "interrelationships affecting "
@@ -5505,7 +5506,6 @@ msgid "Keystrokes"
 msgstr "Spis klawiszy"
 
 #: dselect/helpmsgs.cc:8
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  Down-arrow, j         Up-arrow, k             move highlight\n"
@@ -5536,8 +5536,8 @@ msgid ""
 "cancel)\n"
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
-"Klawisze ruchu: Natêpny/Poprzedni, Góra/Dó³, Do góry/W dó³:\n"
-"  n, Strza³ka-w-dó³     p, Strza³ka-do-góry     ruch kursora\n"
+"Klawisze ruchu: Nastêpny/Poprzedni, Góra/Dó³, Do góry/W dó³:\n"
+"  Strza³ka-w-dó³, n     Strza³ka-do-góry, k     ruch kursora\n"
 "  N, Page-down, Spacja  P, Page-up, Backspace   przewiniêcie listy o 1 "
 "ekran\n"
 "  ^n                    ^p                      przewiniêcie listy o 1 "
@@ -5546,7 +5546,7 @@ msgstr ""
 "listy\n"
 "  u                     d                       przewiniêcie info o 1 ekran\n"
 "  ^u                    ^d                      przewiniêcie info o 1 liniê\n"
-"  B, Left-arrow         F, Right-arrow          przesuniêcie w bok 1/3 "
+"  B, Strza³ka-w-lewo    F, Strza³ka-w-prawo     przesuniêcie w bok 1/3 "
 "ekranu\n"
 "  ^b                    ^f                      przesuniêcie w bok o 1 znak\n"
 "\n"
@@ -5555,12 +5555,12 @@ msgstr ""
 " -, Delete  usuñ                    :, G  ponów przetwarzanie\n"
 " _          usuñ i wyczy¶æ konfiguracjê\n"
 "                                             Pozosta³e klawisze:\n"
-"Zakoñczenie wyboru pakietów:                  ?, F1 przywo³anie pomocy\n"
-" Return  Potwied¼, wyjd¼, sprawd¼ zale¿no¶ci  i, I  prze³±cz/wy³±cz "
+"Zakoñczenie wyboru pakietów:                   ?, F1 przywo³anie pomocy\n"
+" Return  Potwied¼, wyjd¼ (sprawd¼ zale¿no¶ci)  i, I  prze³±cz/wy³±cz "
 "informacje\n"
-"   Q     Potwied¼, wyjd¼, zignoruj zale¿no¶ci o, O  zmiana metody "
+"   Q     Potwied¼, wyjd¼ (zignoruj zale¿no¶ci) o, O  zmiana metody "
 "sortowania\n"
-" X, Esc  Wyjd¼, anuluj wszelkie zmiany        v, V  zmiana sposobu "
+" X, Esc  Wyjd¼, anuluj wszelkie zmiany         v, V  zmiana sposobu "
 "wy¶wietlania\n"
 "   R     Przywrócenie stanu przed wyborem      ^l   od¶wie¿enie ekranu\n"
 "   U     Wybierz sugerowane pakiety             /   szukaj (Return - "
@@ -5934,7 +5934,7 @@ msgid ""
 "  /                search (just return to cancel)\n"
 "  \\                repeat last search\n"
 msgstr ""
-"Klawisze ruchu: Natêpny/Poprzedni, Góra/Dó³, Do góry/W dó³:\n"
+"Klawisze ruchu: Nastêpny/Poprzedni, Góra/Dó³, Do góry/W dó³:\n"
 "  n, Strza³ka-w-dó³     p, Strza³ka-do-góry     ruch kursora\n"
 "  N, Page-down, Spacja  P, Page-up, Backspace   przewiniêcie listy o 1 "
 "ekran\n"
