--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.10.23) unstable; urgency=low
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - Italian (Lele Gaifax).
+    - Polish (Bartosz Fenski).  Closes: #254209.
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
       #246161, #246162, #246163, #246164.
 
