--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jun 18 06:34:43 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * archtable: Requested the technical committee to make the mentioned
+  decision -- we're going with amd64 (that'll please my boss :-)
+  * scripts/dpkg-architecture.pl: Likewise.
+
 Tue Jun 15 19:19:36 BST 2004 Bartosz Fenski aka fEnIo <fenio@o2.pl>
 
   * po/pl.po: Updated.
