--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.10.23) unstable; urgency=low
 
-  * Removed support for x86-64 (x86_64 / amd64).  Closes: #252346.
+  * Architecture Support:
+    - Renamed x86-64 to amd64.  Closes: #252346, #254598.
   * Documentation:
     - Correct typo in dpkg-divert(8).  Closes: #254175.
   * Updated Translations:
