--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun 19 23:11:38 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * dselect/Makefile.in: Remove helpmsgs.h from the GENFILES list so
+  we don't wipe it on "make clean" (it's not generated anymore).
+
 Fri Jun 18 11:49:21 BST 2004 Ognyan Kulev <ogi@fmi.uni-sofia.bg>
 
   * utils/start-stop-daemon.c: Moved pid_is_running inside OSHURD sentry,
