--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 22 17:48:22 BST 2004 Claus Hindsgaul <claus_h@image.dk>
+
+  * po/da.po: Updated.
+
 Sat Jun 19 23:11:38 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * dselect/Makefile.in: Remove helpmsgs.h from the GENFILES list so
