--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 22 17:50:57 BST 2004 Christian Perrier <bubulle@debian.org>
+
+  * po/fr.po: Updated.
+
 Tue Jun 22 17:48:22 BST 2004 Claus Hindsgaul <claus_h@image.dk>
 
   * po/da.po: Updated.
