--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.10.23) unstable; urgency=low
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - Danish (Claus Hindsgaul).  Closes: #252407.
+    - French (Christian Perrier).  Closes: #252586.
     - Italian (Lele Gaifax).
     - Polish (Bartosz Fenski).  Closes: #254209.
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
