--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 23 17:57:45 BST 2004 Changwoo Ryu <cwryu@debian.org>
+
+  * po/ko.po: Added.
+  * configure.in: Added ko to ALL_LINGUAS.
+
 Tue Jun 22 17:50:57 BST 2004 Christian Perrier <bubulle@debian.org>
 
   * po/fr.po: Updated.
