--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.10.23) unstable; urgency=low
     - Renamed x86-64 to amd64.  Closes: #252346, #254598.
   * Documentation:
     - Correct typo in dpkg-divert(8).  Closes: #254175.
+  * New Translations:
+    - Korean (Changwoo Ryu).  Closes: #254590.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - Danish (Claus Hindsgaul).  Closes: #252407.
