--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun 26 16:41:31 CEST 2004 Changwoo Ryu <cwryu@debian.org>
+
+  * po/ko.po: Updated.
+
 Wed Jun 23 17:57:45 BST 2004 Changwoo Ryu <cwryu@debian.org>
 
   * po/ko.po: Added.
