--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jun 26 18:38:34 CEST 2004 David Weinehall <tao@debian.org>
+
+  * scripts/dpkg-buildpackge.sh, scripts/dpkg-name.sh, methods/disk.update,
+  methods/disk.setup: Change non-POSIX -a and -o test options to shell
+  && and || for portability.
+
 Sat Jun 26 16:41:31 CEST 2004 Changwoo Ryu <cwryu@debian.org>
 
   * po/ko.po: Updated.
