--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.10.23) unstable; urgency=low
 
   * Updated hurd start-stop-daemon support.  Closes: #133640, #254180.
+  * Removed usage of non-POSIX test options.  Closes: #256302.
 
   * Architecture Support:
     - Renamed x86-64 to amd64.  Closes: #252346, #254598.
