--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.10.23) unstable; urgency=low
 
+  The "Let the Wookie win" Release.
+
   * Updated hurd start-stop-daemon support.  Closes: #133640, #254180.
   * Removed usage of non-POSIX test options.  Closes: #256302.
 
@@ -18,7 +20,7 @@ dpkg (1.10.23) unstable; urgency=low
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
       #246161, #246162, #246163, #246164.
 
- -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+ -- Scott James Remnant <scott@netsplit.com>  Mon, 19 Jul 2004 19:52:14 +0100
 
 dpkg (1.10.22) unstable; urgency=low
 
