--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.10.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-06-01 18:18-0300\n"
+"POT-Creation-Date: 2004-07-19 19:52+0100\n"
 "PO-Revision-Date: 2004-06-03 18:36+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
@@ -2226,16 +2226,20 @@ msgstr ""
 "  dpkg -r|--remove | -P|--purge <paquet> ... | -a|--pending\n"
 "  dpkg --get-selections [<patró> ...]    mostra la llista de seleccions en\n"
 "                                         l'eixida estàndard\n"
-"  dpkg --set-selections                  estableix seleccions de paquest des de\n"
+"  dpkg --set-selections                  estableix seleccions de paquest des "
+"de\n"
 "                                         l'entrada estàndard\n"
 "  dpkg --update-avail <fitxer-Packages>  reemplaça la informació de paquets\n"
 "                                         disponibles\n"
 "  dpkg --merge-avail  <fitxer-Packages>  afegeix la informació del fitxer\n"
-"  dpkg --clear-avail                     esborra la informació actual sobre els\n"
+"  dpkg --clear-avail                     esborra la informació actual sobre "
+"els\n"
 "                                         paquets disponibles\n"
-"  dpkg --forget-old-unavail              oblida la informació sobre paquets no\n"
+"  dpkg --forget-old-unavail              oblida la informació sobre paquets "
+"no\n"
 "                                         instal·lats i no disponibles\n"
-"  dpkg -s|--status <paquet> ...          mostra detalls sobre l'estat del paquet\n"
+"  dpkg -s|--status <paquet> ...          mostra detalls sobre l'estat del "
+"paquet\n"
 "  dpkg --print-avail <paquet> ...        mostra detalls sobre la versió\n"
 "                                         disponible\n"
 "  dpkg -L|--listfiles <paquet> ...       llista els fitxers que són del(s)\n"
@@ -2244,17 +2248,24 @@ msgstr ""
 "  dpkg -S|--search <patró> ...           cerca els paquets que contenen\n"
 "                                         aquest(s) fitxer(s)\n"
 "  dpkg -C|--audit                        verifica els paquets trencats\n"
-"  dpkg --print-architecture              mostra l'arquitectura de destí (usa\n"
+"  dpkg --print-architecture              mostra l'arquitectura de destí "
+"(usa\n"
 "                                         GCC)\n"
-"  dpkg --print-gnu-build-architecture    mostra la versió GNU de l'arquitectura\n"
+"  dpkg --print-gnu-build-architecture    mostra la versió GNU de "
+"l'arquitectura\n"
 "                                         de destí\n"
-"  dpkg --print-installation-architecture mostra l'arquitectura de la màquina\n"
+"  dpkg --print-installation-architecture mostra l'arquitectura de la "
+"màquina\n"
 "                                         (per a la instal·lació)\n"
-"  dpkg --compare-versions <a> <rel> <b>  compara els números de versió - mireu\n"
+"  dpkg --compare-versions <a> <rel> <b>  compara els números de versió - "
+"mireu\n"
 "                                         més endavant\n"
-"  dpkg --help | --version                mostra aquesta ajuda / número de versió\n"
-"  dpkg --force-help | -Dh|--debug=help   mostra ajuda sobre forçar o depurar\n"
-"  dpkg --licence                         mostra els termes de la llicència de\n"
+"  dpkg --help | --version                mostra aquesta ajuda / número de "
+"versió\n"
+"  dpkg --force-help | -Dh|--debug=help   mostra ajuda sobre forçar o "
+"depurar\n"
+"  dpkg --licence                         mostra els termes de la llicència "
+"de\n"
 "                                         copyright\n"
 "\n"
 "Useu dpkg -b|--build|-c|--contents|-e|--control|-I|--info|-f|--field|\n"
@@ -2265,22 +2276,27 @@ msgstr ""
 "\n"
 "Opcions:\n"
 "  --admindir=<directori>    Useu <directori> en comptes de %s\n"
-"  --root=<directori>        Instal·la en un sistema alternatiu amb directori\n"
+"  --root=<directori>        Instal·la en un sistema alternatiu amb "
+"directori\n"
 "                            arrel en un altre lloc\n"
-"  --instdir=<directori>     Canvia l'arrel de la instal·lació sense alterar el\n"
+"  --instdir=<directori>     Canvia l'arrel de la instal·lació sense alterar "
+"el\n"
 "                            directori de gestió\n"
 "  -O|--selected-only        Omet els paquets no seleccionats per a\n"
 "                            instal·lació o actualització\n"
-"  -E|--skip-same-version    Omet els paquets en que la versió sigui la mateixa\n"
+"  -E|--skip-same-version    Omet els paquets en que la versió sigui la "
+"mateixa\n"
 "                            que la dels instal·lats\n"
 "  -G=--refuse-downgrade     Omet els paquets amb una versió anterior que la\n"
 "                            dels instal·lats\n"
-"  -B|--auto-deconfigure     Instal·la encara que es pugui trencar algun altre\n"
+"  -B|--auto-deconfigure     Instal·la encara que es pugui trencar algun "
+"altre\n"
 "                            paquet\n"
 "  --no-debsig               No verifica las firmes dels paquets\n"
 "  --no-act| |--dry-run|--simulate\n"
 "                            Només indica el que faria, però no fà res\n"
-"  -D|--debug=<octal>        Habilita la depuració, mireu -Dhelp ó --debug=help\n"
+"  -D|--debug=<octal>        Habilita la depuració, mireu -Dhelp ó --"
+"debug=help\n"
 "  --status-fd <n>           Envia actualitzacions de canvis d'estat al\n"
 "                            descriptor de fitxer <n>\n"
 "  --ignore-depends=<paquet>,... No té en compte les dependències que\n"
@@ -5443,10 +5459,14 @@ msgid ""
 "You can use `o' and `O' to change the sort order and give yourself the "
 "opportunity to mark packages in different kinds of groups."
 msgstr ""
-"La línia que heu ressaltat representa molts paquets. Si demaneu que s'instal·lin, desinstal·lin, mantinguin, etc. això afectarà a tots els paquets que cumpleixin el criteri indicat.\n"
+"La línia que heu ressaltat representa molts paquets. Si demaneu que "
+"s'instal·lin, desinstal·lin, mantinguin, etc. això afectarà a tots els "
+"paquets que cumpleixin el criteri indicat.\n"
 "\n"
-"Si desplaceu l'indicatiu de ressaltat a una línia d'un paquet determinat se vos mostrarà informació referent a aquest paquet.\n"
-"Podeu usar «o» i «O» per a canviar l'ordre dels paquets llistats permetent-vos marcar els paquets per diferents classes o grups."
+"Si desplaceu l'indicatiu de ressaltat a una línia d'un paquet determinat se "
+"vos mostrarà informació referent a aquest paquet.\n"
+"Podeu usar «o» i «O» per a canviar l'ordre dels paquets llistats permetent-"
+"vos marcar els paquets per diferents classes o grups."
 
 #: dselect/pkginfo.cc:96
 msgid "interrelationships affecting "
@@ -5621,10 +5641,12 @@ msgstr ""
 "  Avall, j             Amunt, k              mou el ressaltat\n"
 "  N, Pàg. avall, Espai P, Pàg. amunt, Tornar desplaça la llista 1 pàgina\n"
 "  ^n                   ^p                    desplaça la llista 1 línia\n"
-"  t, Inici             e, Fí                 salta a l'inici/fí de la llista\n"
+"  t, Inici             e, Fí                 salta a l'inici/fí de la "
+"llista\n"
 "  u                    d                     desplaça la info. 1 pàgina\n"
 "  ^u                   ^d                    desplaça la info. 1 línia\n"
-"  B, Esquerra          F, Dreta              desplaça la visual. 1/3 pantalla\n"
+"  B, Esquerra          F, Dreta              desplaça la visual. 1/3 "
+"pantalla\n"
 "  ^b                   ^f                    desplaça la visual. 1 caràcter\n"
 "Marca els paquets a processar:\n"
 " +, Insert   instal·la o actualitza\n"
@@ -5633,13 +5655,20 @@ msgstr ""
 " :, G        no manté: actualitza o deixa sense instal·lar\n"
 " _           desinstal·la i purga la configuració\n"
 "                                     Miscel·lània:\n"
-"Treu, surt, sobreescriu (teniu en compte les majúscules!): ?, F1 demana ajuda\n"
-" Enter  Confirma, treu (verifica dependències) i, I  mostra els tipus d'info.\n"
-"   Q    Confirma, treu (no verifica dependènc.) o, O  circula opcions d'ordre\n"
-" X, Esc sortir (eXit), abandona qualsevol canvi v, V  canvia la visió d'estat\n"
-"   R    Reverteix l'estat abans d'aquesta llista ^l   refresca la visualització\n"
-"   U    deixa-ho en l'estat suggerit              /   cerca (Enter cancelarà)\n"
-"   D    deixa-ho tot en l'estat requerit          \\   repeteix l'última cerca\n"
+"Treu, surt, sobreescriu (teniu en compte les majúscules!): ?, F1 demana "
+"ajuda\n"
+" Enter  Confirma, treu (verifica dependències) i, I  mostra els tipus "
+"d'info.\n"
+"   Q    Confirma, treu (no verifica dependènc.) o, O  circula opcions "
+"d'ordre\n"
+" X, Esc sortir (eXit), abandona qualsevol canvi v, V  canvia la visió "
+"d'estat\n"
+"   R    Reverteix l'estat abans d'aquesta llista ^l   refresca la "
+"visualització\n"
+"   U    deixa-ho en l'estat suggerit              /   cerca (Enter "
+"cancelarà)\n"
+"   D    deixa-ho tot en l'estat requerit          \\   repeteix l'última "
+"cerca\n"
 
 #: dselect/helpmsgs.cc:33
 msgid "Introduction to package selections"
@@ -5906,26 +5935,30 @@ msgid ""
 "  Use the `i' key to cycle through the displays, and `I' to hide the\n"
 "  information display or expand it to use almost all of the screen.\n"
 msgstr ""
-"* Ressaltat: el ressaltat destacarà una línia en el llistat de paquets. Indica\n"
+"* Ressaltat: el ressaltat destacarà una línia en el llistat de paquets. "
+"Indica\n"
 "  a quin(s) paquet(s) afectarà el prémer «+», «-» i «_».\n"
 "\n"
 "* La línia divisòria en la meitat de la pantalla mostra una breu explicació\n"
 "  de l'estat del paquet ressaltat o una descripció del grup ressaltat si es\n"
 "  tracta d'una línia de grup.  Si no enteneu el significat d'alguns dels\n"
 "  caràcters d'estat mostrats, dirigiu-vos al paquet rellevant i mireu en\n"
-"  aquesta línia de divisió, o useu la tecla «v» per a una pantalla detallada\n"
+"  aquesta línia de divisió, o useu la tecla «v» per a una pantalla "
+"detallada\n"
 "  (premeu «v» novament per a tornar a la vista anterior).\n"
 "\n"
 "* El final de la pantalla mostra més informació sobre el paquet actualment\n"
 "  destacat (si només n'hi ha un).\n"
 "\n"
-"  Pot mostrar una descripció estesa del paquet, els detalls de control interns\n"
+"  Pot mostrar una descripció estesa del paquet, els detalls de control "
+"interns\n"
 "  del paquet (tant per a la versió instal·lada com per a la disponible) o\n"
 "  informació sobre els conflictes i les dependències referents al paquet\n"
 "  actual (en sub-llistes de resolució de conflicte/dependències).\n"
 "\n"
 "  Useu la tecla «i» per a per a canviar entre les pantalles i «I» per a\n"
-"  amagar la mostra d'informació, o expandir-la per a que utilitze quasi tota\n"
+"  amagar la mostra d'informació, o expandir-la per a que utilitze quasi "
+"tota\n"
 "  la pantalla.\n"
 
 #: dselect/helpmsgs.cc:148
@@ -5958,12 +5991,16 @@ msgstr ""
 "dselect i dpkg poden fer una instal·lació automàtica, carregant els paquets\n"
 "que s'instal·laran des d'una gran diversitat de llocs diferents.\n"
 "\n"
-"Aquesta llista vos permetrà seleccionar un d'aquests mètodes d'instal·lació.\n"
+"Aquesta llista vos permetrà seleccionar un d'aquests mètodes "
+"d'instal·lació.\n"
 "\n"
-"Desplaceu el ressaltat lluminós al mètode que desitgeu usar i premeu <Intro>\n"
-"Llavors se vos preguntarà per la informació necessària per a la instal·lació.\n"
+"Desplaceu el ressaltat lluminós al mètode que desitgeu usar i premeu "
+"<Intro>\n"
+"Llavors se vos preguntarà per la informació necessària per a la "
+"instal·lació.\n"
 "\n"
-"Mentre desplaceu l'indicatiu ressaltat se vos mostrarà, quan estigui disponible,\n"
+"Mentre desplaceu l'indicatiu ressaltat se vos mostrarà, quan estigui "
+"disponible,\n"
 "una descripció de cada mètode en la meitat inferior de la pantalla.\n"
 "\n"
 "Si desitgeu sortir sense canviar res useu la tecla «x» mentre estigueu\n"
@@ -6000,19 +6037,23 @@ msgid ""
 "  /                search (just return to cancel)\n"
 "  \\                repeat last search\n"
 msgstr ""
-"Tecles de moviment: Re Pàg/Av Pàg, Inici/Fí, Adalt/Avall, Endavant/Endarrere\n"
+"Tecles de moviment: Re Pàg/Av Pàg, Inici/Fí, Adalt/Avall, Endavant/"
+"Endarrere\n"
 "  n, Fletxa-avall     p, Fletxa-amunt      mou l'indicador ressaltat\n"
 "  N, Re Pàg, Espai    P, Av Pàg, Retroces  desplaça la llista en 1 pàgina\n"
 "  ^n                  ^p                   desplaça la llista en 1 línia\n"
 "  t, Inici            b, Fí                salta a l'inici/fí de la llista\n"
 "  u                   d                    desplaça la info. en 1 pàgina\n"
 "  ^u                  ^d                   desplaça la info. en 1 línia\n"
-"  B, Fletxa-esquerra  F, Fletxa-dreta      desplaça la mostra 1/3 de la pantalla\n"
+"  B, Fletxa-esquerra  F, Fletxa-dreta      desplaça la mostra 1/3 de la "
+"pantalla\n"
 "  ^b                  ^f                   desplaça la mostra 1 caràcter\n"
-"(Aquestes són les mateixes tecles de moviment que en la llista mostrada del paquet.)\n"
+"(Aquestes són les mateixes tecles de moviment que en la llista mostrada del "
+"paquet.)\n"
 "\n"
 "Treure:\n"
-" Return, Intro   selecciona aquest mètode i anar al seu diàleg de configuració\n"
+" Return, Intro   selecciona aquest mètode i anar al seu diàleg de "
+"configuració\n"
 " x, X            surt sense alterar o establir el mètode d'instal·lació\n"
 "\n"
 "Miscelània:\n"
