--- a/po/da.po
+++ b/po/da.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-06-01 18:18-0300\n"
+"POT-Creation-Date: 2004-07-19 19:52+0100\n"
 "PO-Revision-Date: 2004-06-03 09:57+0200\n"
 "Last-Translator: Claus Hindsgaul <claus_h@image.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
@@ -85,7 +85,8 @@ msgstr ""
 
 #: lib/dbmodify.c:62
 #, c-format
-msgid "updates directory contains files with different length names (both %d and %d)"
+msgid ""
+"updates directory contains files with different length names (both %d and %d)"
 msgstr ""
 "opdateringsmappen indeholder filer med forskellige navnelængder (både %d og %"
 "d)"
@@ -199,7 +200,8 @@ msgstr "kunne ikke lukke '%.250s' efter skrivning af %s-information"
 #: lib/dump.c:321
 #, c-format
 msgid "failed to link `%.250s' to `%.250s' for backup of %s info"
-msgstr "kunne ikke lænke '%.250s' til '%.250s' som sikkerhedskopiering af %s-info"
+msgstr ""
+"kunne ikke lænke '%.250s' til '%.250s' som sikkerhedskopiering af %s-info"
 
 #: lib/dump.c:324
 #, c-format
@@ -328,8 +330,10 @@ msgstr "root- eller null-mappen er nævnt i konfigurationsfil"
 
 #: lib/fields.c:305
 #, c-format
-msgid "`%s' field, missing package name, or garbage where package name expected"
-msgstr "'%s'-felt, manglende pakkenavn eller skrammel, hvor pakkenavnet var forventet"
+msgid ""
+"`%s' field, missing package name, or garbage where package name expected"
+msgstr ""
+"'%s'-felt, manglende pakkenavn eller skrammel, hvor pakkenavnet var forventet"
 
 #: lib/fields.c:308
 #, c-format
@@ -662,12 +666,14 @@ msgstr "feltnavn '%.*s' skal efterfølges af et kolon"
 #: lib/parse.c:165
 #, c-format
 msgid "EOF before value of field `%.*s' (missing final newline)"
-msgstr "Slut-på-fil før værdien af felt '%.*s' (afsluttende linjeskift mangler)"
+msgstr ""
+"Slut-på-fil før værdien af felt '%.*s' (afsluttende linjeskift mangler)"
 
 #: lib/parse.c:169
 #, c-format
 msgid "MSDOS EOF char in value of field `%.*s' (missing newline?)"
-msgstr "MSDOS-slut-på-fil-tegn i værdien for felt '%.*s' (manglende linjeskift?)"
+msgstr ""
+"MSDOS-slut-på-fil-tegn i værdien for felt '%.*s' (manglende linjeskift?)"
 
 #: lib/parse.c:183
 #, c-format
@@ -854,7 +860,8 @@ msgstr ""
 #: main/archives.c:391
 #, c-format
 msgid "unable to stat restored `%.255s' before installing another version"
-msgstr "kunne ikke finde genskabt '%.255s', inden jeg installerede en anden version"
+msgstr ""
+"kunne ikke finde genskabt '%.255s', inden jeg installerede en anden version"
 
 #: main/archives.c:423
 #, c-format
@@ -868,7 +875,8 @@ msgstr "Erstatter filer i den gamle pakke %s...\n"
 
 #: main/archives.c:458
 #, c-format
-msgid "trying to overwrite directory `%.250s' in package %.250s with nondirectory"
+msgid ""
+"trying to overwrite directory `%.250s' in package %.250s with nondirectory"
 msgstr "forsøger at overskrive mappen '%.250s' i pakken %.250s med ikke-mappe"
 
 #: main/archives.c:468
@@ -1103,7 +1111,8 @@ msgstr "%s - advarsel: nedgraderer %.250s fra %.250s til %.250s.\n"
 #: main/archives.c:985
 #, c-format
 msgid "Will not downgrade %.250s from version %.250s to %.250s, skipping.\n"
-msgstr "Vil ikke nedgradere %.250s fra version %.250s til %.250s, springer over.\n"
+msgstr ""
+"Vil ikke nedgradere %.250s fra version %.250s til %.250s, springer over.\n"
 
 #: main/cleanup.c:84
 #, c-format
@@ -1203,7 +1212,8 @@ msgstr ""
 #: main/configure.c:226
 #, c-format
 msgid "dpkg: %s: warning - failed to remove old backup `%.250s': %s\n"
-msgstr "dpkg: %s: advarsel - kunne ikke fjerne gammel sikkerhedskopi '%.250s': %s\n"
+msgstr ""
+"dpkg: %s: advarsel - kunne ikke fjerne gammel sikkerhedskopi '%.250s': %s\n"
 
 #: main/configure.c:234
 #, c-format
@@ -1225,7 +1235,8 @@ msgstr ""
 #: main/configure.c:255
 #, c-format
 msgid "dpkg: %s: warning - failed to remove `%.250s' (before overwrite): %s\n"
-msgstr "dpkg: %s: advarsel - kunne ikke fjerne '%.250s' (inden overskrivning): %s\n"
+msgstr ""
+"dpkg: %s: advarsel - kunne ikke fjerne '%.250s' (inden overskrivning): %s\n"
 
 #: main/configure.c:259
 #, c-format
@@ -1295,7 +1306,8 @@ msgstr "md5hash"
 #: main/configure.c:409
 #, c-format
 msgid "dpkg: %s: warning - unable to open conffile %s for hash: %s\n"
-msgstr "dpkg: %s: advarsel - kunne ikke åbne konfigurationsfil %s til hashning: %s\n"
+msgstr ""
+"dpkg: %s: advarsel - kunne ikke åbne konfigurationsfil %s til hashning: %s\n"
 
 #: main/configure.c:427
 #, c-format
@@ -1305,7 +1317,8 @@ msgstr "kunne ikke ændre ejerskab af ny medsendt konfigurationsfil '%.250s'"
 #: main/configure.c:430
 #, c-format
 msgid "unable to set mode of new dist conffile `%.250s'"
-msgstr "kunne ikke ændre rettighedsflag for medsendt konfigurationsfil '%.250s'"
+msgstr ""
+"kunne ikke ændre rettighedsflag for medsendt konfigurationsfil '%.250s'"
 
 #: main/configure.c:460
 #, c-format
@@ -1332,7 +1345,8 @@ msgstr "kunne ikke udføre skal (%.250s)"
 
 #: main/configure.c:510
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
-msgstr "Glem ikke at sætte denne proces i forgrunden ('fg'), når du er færdig!\n"
+msgstr ""
+"Glem ikke at sætte denne proces i forgrunden ('fg'), når du er færdig!\n"
 
 #: main/configure.c:529
 #, c-format
@@ -1446,7 +1460,8 @@ msgstr "[ingen forvalgt handling]"
 
 #: main/configure.c:597
 msgid "error writing to stderr, discovered before conffile prompt"
-msgstr "fejl ved skrivning til standardfejl, opdaget inden konfigurationsfil-prompt"
+msgstr ""
+"fejl ved skrivning til standardfejl, opdaget inden konfigurationsfil-prompt"
 
 #: main/configure.c:604
 msgid "read error on stdin at conffile prompt"
@@ -1718,11 +1733,14 @@ msgstr "ingen linjeskift"
 #: main/enquiry.c:449
 #, c-format
 msgid "dpkg: warning, architecture `%s' not in remapping table\n"
-msgstr "dpkg: advarsel, arkitekturen '%s' findes ikke i genoverførselstabellen\n"
+msgstr ""
+"dpkg: advarsel, arkitekturen '%s' findes ikke i genoverførselstabellen\n"
 
 #: main/enquiry.c:491
-msgid "--compare-versions takes three arguments: <version> <relation> <version>"
-msgstr "--compare-versions kræver tre parametre: <version> <relation> <version>"
+msgid ""
+"--compare-versions takes three arguments: <version> <relation> <version>"
+msgstr ""
+"--compare-versions kræver tre parametre: <version> <relation> <version>"
 
 #: main/enquiry.c:496
 msgid "--compare-versions bad relation"
@@ -1748,7 +1766,8 @@ msgstr ""
 " %s\n"
 
 #: main/errors.c:60
-msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid ""
+"dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 "dpkg: kunne ikke frigøre hukommelse til ny indgang i listen over mislykkede "
 "pakker."
@@ -1773,7 +1792,8 @@ msgstr "Pakken %s var tilbageholdt, behandler den alligevel, efter dit ønske\n"
 
 #: main/errors.c:95
 #, c-format
-msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid ""
+"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 "Pakken %s er tilbageholdt, rører den ikke.  Brug --force-hold for at "
 "gennemtvinge.\n"
@@ -2461,7 +2481,8 @@ msgstr "--%s kræver mindst ét pakkenavn som parameter"
 msgid ""
 "you must specify packages by their own names, not by quoting the names of "
 "the files they come in"
-msgstr "du skal angive pakker ved deres egne navne, ikke ved de filnavne, de ligger i"
+msgstr ""
+"du skal angive pakker ved deres egne navne, ikke ved de filnavne, de ligger i"
 
 #: main/packages.c:150
 #, c-format
@@ -2528,7 +2549,8 @@ msgstr "kunne ikke sikre, at '%.250s' ikke eksisteret"
 
 #: main/processarc.c:117
 msgid "failed to exec dpkg-split to see if it's part of a multiparter"
-msgstr "kunne ikke eksekvere 'dpkg-split' for at se om den er en del af multiparter"
+msgstr ""
+"kunne ikke eksekvere 'dpkg-split' for at se om den er en del af multiparter"
 
 #: main/processarc.c:120
 msgid "wait for dpkg-split failed"
@@ -2617,7 +2639,8 @@ msgstr "Udpakker %s (fra %s)...\n"
 #: main/processarc.c:308
 #, c-format
 msgid "name of conffile (starting `%.250s') is too long (>%d characters)"
-msgstr "navnet på konfigurationsfilen (starter med '%.250s') er for langt (>%d tegn)"
+msgstr ""
+"navnet på konfigurationsfilen (starter med '%.250s') er for langt (>%d tegn)"
 
 #: main/processarc.c:362
 #, c-format
@@ -2706,7 +2729,8 @@ msgstr "pakkekontrolinformation indeholdt mappen '%.250s'"
 #: main/processarc.c:733
 #, c-format
 msgid "package control info rmdir of `%.250s' didn't say not a dir"
-msgstr "pakkekontrolinformation 'rmdir' af '%.250s' påstod, det ikke er en mappe"
+msgstr ""
+"pakkekontrolinformation 'rmdir' af '%.250s' påstod, det ikke er en mappe"
 
 #: main/processarc.c:739
 #, c-format
@@ -2721,7 +2745,8 @@ msgstr "kunne ikke installere ny informationsfil '%.250s' som '%.250s'"
 #: main/processarc.c:899
 #, c-format
 msgid "(Noting disappearance of %s, which has been completely replaced.)\n"
-msgstr "(Bemærker forsvindingen af %s, der er blevet fuldstændigt erstattet.)\n"
+msgstr ""
+"(Bemærker forsvindingen af %s, der er blevet fuldstændigt erstattet.)\n"
 
 #: main/processarc.c:935
 #, c-format
@@ -2730,7 +2755,8 @@ msgstr "kunne ikke slette forsvindende kontrolinformationsfil '%.250s'"
 
 #: main/remove.c:92
 #, c-format
-msgid "dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
+msgid ""
+"dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
 msgstr ""
 "dpkg - advarsel: ignorerer ønsket om at fjerne %.250s, som ikke er "
 "installeret.\n"
@@ -2920,7 +2946,8 @@ msgstr "kunne ikke tilgå dpkg's statusområde for rå tilgængelighedsopdatering"
 
 #: main/update.c:59
 msgid "bulk available update requires write access to dpkg status area"
-msgstr "rå tilgængelighedsopdatering kræve skriveadgang til dpkg's statusområde"
+msgstr ""
+"rå tilgængelighedsopdatering kræve skriveadgang til dpkg's statusområde"
 
 #: main/update.c:66
 #, c-format
@@ -2995,7 +3022,8 @@ msgstr "dpkg: %s ikke fundet.\n"
 #: main/query.c:317
 #, c-format
 msgid "Package `%s' is not installed and no info is available.\n"
-msgstr "Pakken '%s' er ikke installeret og der er ingen tilgængelig information.\n"
+msgstr ""
+"Pakken '%s' er ikke installeret og der er ingen tilgængelig information.\n"
 
 #: main/query.c:326
 #, c-format
@@ -3198,7 +3226,8 @@ msgstr "dpkg-deb: opbygger pakken '%s' i '%s'.\n"
 #: dpkg-deb/build.c:303
 #, c-format
 msgid "control directory has bad permissions %03lo (must be >=0755 and <=0775)"
-msgstr "kontrolmappen har forkerte rettigheder %03lo (skal være >=0755 og <=0775)"
+msgstr ""
+"kontrolmappen har forkerte rettigheder %03lo (skal være >=0755 og <=0775)"
 
 #: dpkg-deb/build.c:314
 #, c-format
@@ -3227,7 +3256,8 @@ msgstr "tom streng fra 'fgets' under læsning af konfigurationsfiler"
 
 #: dpkg-deb/build.c:332
 #, c-format
-msgid "warning, conffile name `%.50s...' is too long, or missing final newline\n"
+msgid ""
+"warning, conffile name `%.50s...' is too long, or missing final newline\n"
 msgstr ""
 "advarsel, konfigurationsfilnavn '%.50s...' er for langt, eller mangler "
 "afsluttende linjeskift\n"
@@ -3788,7 +3818,8 @@ msgstr "filen '%.250s' is ødelagt - nuller i informationsafsnittet"
 #: split/info.c:116
 #, c-format
 msgid "file `%.250s' is format version `%.250s' - you need a newer dpkg-split"
-msgstr "filen '%.250s' har formatversion '%.250s' - du behøver en nyere dpkg-split"
+msgstr ""
+"filen '%.250s' har formatversion '%.250s' - du behøver en nyere dpkg-split"
 
 #: split/info.c:124
 #, c-format
@@ -3820,7 +3851,8 @@ msgstr "filen '%.250s' is ødelagt - andet medlem er ikke datamedlem"
 #: split/info.c:153
 #, c-format
 msgid "file `%.250s' is corrupt - wrong number of parts for quoted sizes"
-msgstr "filen '%.250s' is ødelagt - forkert antal dele for de oplyste størrelser"
+msgstr ""
+"filen '%.250s' is ødelagt - forkert antal dele for de oplyste størrelser"
 
 #: split/info.c:157
 #, c-format
@@ -3908,7 +3940,8 @@ msgstr "filerne '%.250s' og '%.250s' er ikke dele af samme fil"
 #: split/join.c:89
 #, c-format
 msgid "there are several versions of part %d - at least `%.250s' and `%.250s'"
-msgstr "der er flere versioner af del %d - i hvert tilfælde '%.250s' og '%.250s'"
+msgstr ""
+"der er flere versioner af del %d - i hvert tilfælde '%.250s' og '%.250s'"
 
 #: split/join.c:102
 msgid "--join requires one or more part file arguments"
@@ -3921,7 +3954,8 @@ msgstr "del %d mangler"
 
 #: split/main.c:40
 msgid "Debian GNU/Linux `dpkg-split' package split/join tool; version "
-msgstr "Debian GNU/Linux 'dpkg-split' pakkeopdeling/sammenføjningsværktøj; version "
+msgstr ""
+"Debian GNU/Linux 'dpkg-split' pakkeopdeling/sammenføjningsværktøj; version "
 
 #: split/main.c:42
 msgid ""
@@ -4225,7 +4259,8 @@ msgstr "Hjælp: "
 
 #: dselect/basecmds.cc:177
 msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
-msgstr "Tryk ? for hjælpemenu, <mellemrum> for næste emne, <retur> afslutter hjælp."
+msgstr ""
+"Tryk ? for hjælpemenu, <mellemrum> for næste emne, <retur> afslutter hjælp."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -5881,4 +5916,3 @@ msgstr ""
 
 #~ msgid "no slash after gcc-lib"
 #~ msgstr "ingen streg efter gcc-lib"
-
