--- a/po/pl.po
+++ b/po/pl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.9.20\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-06-01 18:18-0300\n"
+"POT-Creation-Date: 2004-07-19 19:52+0100\n"
 "PO-Revision-Date: 2004-06-13 19:28+0200\n"
 "Last-Translator: Bartosz Fenski <fenio@o2.pl>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
@@ -2248,8 +2248,7 @@ msgstr ""
 "  --no-act                 Tylko poka¿ co siê stanie - nie zmieniaj niczego\n"
 "  -D|--debug=<ósemkowo>    W³±czenie debuggera - zobacz -Dhelp lub --"
 "debug=help\n"
-"  --status-fd <n>          Wy¶lij aktualizacje zmian stanu do pliku "
-"<n>\n"
+"  --status-fd <n>          Wy¶lij aktualizacje zmian stanu do pliku <n>\n"
 "  --ignore-depends=<pakiet>,... Ignoruj zale¿no¶ci dotycz±ce <pakietu>\n"
 "  --force-...                   Ignoruj problemy - zobacz --force-help\n"
 "  --no-force-...|--refuse-...   Zatrzymaj gdy wyst±pi± problemy\n"
