--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.24) unstable; urgency=low
+
+  * 
+
+ -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+
 dpkg (1.10.23) unstable; urgency=low
 
   The "Let the Wookie win" Release.
