--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.10.24) unstable; urgency=low
 
   * 
+  * Updated Translations:
+    - Swedish (Peter Karlsson).
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
